# lisp_course_material

./: assignment_7_README.txt
assignment_1/: CMakeLists.txt  package.xml
assignment_1/src/: orc-battle.lisp
assignment_1_solved/: CMakeLists.txt  package.xml
assignment_1_solved/src/: orc-battle.lisp
assignment_2/misc/.emacs.d/: init.el
assignment_2/src/: fortune.lisp
assignment_3/src/: bomb.lisp
assignment_4/src/: trees.lisp
assignment_5/src/: domain-lisp-course.lisp  infrastructure.lisp  package.lisp  planner.asd  planner.lisp  tests.lisp
