<?xml version="1.0"?>
<package>
  <name>assignment_1_solved</name>
  <version>0.0.0</version>
  <description>The assignment_1_solved package</description>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>Public domain</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
